@@ -14,6 +14,12 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Disabled some insecure (and potentially exploitable) mapserv command-line
+  debug arguments (#3485). The --enable-cgi-cl-debug-args configure switch
+  can be used to re-enable them for devs who really cannot get away without
+  them and who understand the potential security risk (not recommended for 
+  production servers or those who don't understand the security implications).
+
 - Fixed possible buffer overflow in msTmpFile() (#3484)
 
 - Fixed Using STYLEITEM AUTO, loadExpression fails when the label text contains a double quote (#3481)
